# gol-rs

./: Cargo.toml  README.md
src/: cell.rs  community.rs  coord.rs  grid.rs  lib.rs  main.rs  pattern.rs  population.rs  sdl.rs  world.rs
